# ffmpeg_demo

./: CMakeLists.txt
ffmpeg-3.3.2/lib/: libavdevice.so.57.6.100  libavfilter.so.6.82.100  libavformat.so.57.71.100  libavutil.so.55.58.100  libpostproc.so.54.5.100  libswresample.so.2.7.100  libswscale.so.4.6.100
ffmpeg-3.3.2/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: main.cpp  transcode.cpp
